docs: update bib refs

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -233,3 +233,66 @@ and Rundshagen, Michael",
     year={2023}
 }
 
+@inbook{Sta14e,
+    author = {Starke, Gernot},
+    title = {Kommunikation und Dokumentation von Architekturen},
+    booktitle = {Effektive Softwarearchitekturen},
+    chapter = {},
+    pages = {63-105},
+    doi = {10.3139/9783446436534.004},
+    URL = {https://www.hanser-elibrary.com/doi/abs/10.3139/9783446436534.004},
+    eprint = {https://www.hanser-elibrary.com/doi/pdf/10.3139/9783446436534.004}
+}
+
+@inbook{Sta14g,
+    author = {Starke, Gernot},
+    title = {Strukturentwurf, Architektur- und Designmuster},
+    booktitle = {Effektive Softwarearchitekturen},
+    chapter = {},
+    pages = {125-186},
+    doi = {10.3139/9783446436534.006},
+    URL = {https://www.hanser-elibrary.com/doi/abs/10.3139/9783446436534.006},
+    eprint = {https://www.hanser-elibrary.com/doi/pdf/10.3139/9783446436534.006}
+}
+
+
+@book{TH19,
+    title={The Pragmatic Programmer: Your journey to mastery, 20th Anniversary Edition},
+    author={Thomas, D. and Hunt, A.},
+    isbn={9780135956915},
+    url={https://books.google.de/books?id=LhOlDwAAQBAJ},
+    year={2019},
+    publisher={Pearson Education}
+}
+
+
+@book{Fow96,
+    abstract = { This innovative book recognizes the need within the object-oriented community for a book that goes beyond the tools and techniques of the typical methodology book. In Analysis Patterns: Reusable Object Models, Martin Fowler focuses on the end result of object-oriented analysis and design - the models themselves. He shares with you his wealth of object modeling experience and his keen eye for identifying repeating problems and transforming them into reusable models. Analysis Patterns provides a catalogue of patterns that have emerged in a wide range of domains including trading, measurement, accounting and organizational relationships. Recognizing that conceptual patterns cannot exist in isolation, the author also presents a series of support patterns that discuss how to turn conceptual models into software that in turn fits into an architecture for a large information system. Included in each pattern is the reasoning behind their design, rules for when they should and should not be used, and tips for implementation. The examples presented in this book comprise a cookbook of useful models and insight into the skill of reuse that will improve analysis, modeling and implementation.},
+    author = {Fowler, Martin},
+    isbn = {978-0-201-89542-1},
+    publisher = {Addison-Wesley},
+    series = {Object Technology Series},
+    title = {Analysis Patterns: Reusable Object Models},
+    year = 1996
+}
+
+@book{ACM02,
+    author = {Alur, Deepak and Malks, Dan and Crupi, John and Booch, Grady and Fowler, Martin},
+    title = {Core J2EE Patterns (Core Design Series): Best Practices and Design Strategies},
+    year = {2003},
+    isbn = {0131422464},
+    publisher = {Sun Microsystems, Inc.},
+    address = {USA},
+    edition = {2},
+    abstract = {From the Book: Preface This book is about patterns for the Java 2 platform, Enterprise Edition (J2EE). These J2EE patterns provide solutions for problems typically encountered by designers of software applications for the J2EE platform. All the patterns documented in the catalog have been discovered in the field, where they have been used to create successful J2EE applications for our customers. This book describes proven solutions for the J2EE platform with a particular emphasis on such key J2EE technologies as: Java Server Pages (JSP), Servlets, Enterprise JavaBeans (EJB) components, Java Message Service (JMS), JDBC, and Java Naming and Directory Interface (JNDI). We offer solutions for recurring problems for the J2EE platform through the J2EE pattern catalog and J2EE refactorings. You can apply these ideas when developing new systems or when improving the design of existing systems. The patterns in this book will help you quickly gain the proficiency and skills to build robust, efficient enterprise applications. Today, as in the past, many of us naively assume that learning a technology is synonymous with learning to design with the technology. Certainly learning the technology is an important part to being successful in designing with the technology. Many existing Java books are excellent at explaining technology details, such as API specifics and so forth, but at the same time they give no insight on applying the technology. Learning to design comes from experience and from sharing knowledge on best practices and bad practices. The experiences we have conveyed in this book are derived from the work we have done in the field. We are part of Sun Microsystems, Inc.s Sun Java Center (SJC) consulting organization. In our work, we often encounter situations where, because technology is moving so quickly, designers and developers are still struggling to understand the technology, let alone how to design with the technology. It is not good enough to tell designers and developers to write good code, nor is it sufficient to suggest using Servlets and JSP for developing the presentation tier and EJB components for developing the business tier. So, given this scenario, where does an aspiring J2EE architect learn not only what to do, but what not to do What are the best practices What are the bad practices How do you go from problem to design to implementation Sun Java Center and the J2EE Pattern Catalog Since its inception, SJC architects have been working with clients all over the world to successfully design, architect, build, and deploy various types of systems based on Java and J2EE. The SJC is a rapidly growing consulting organization constantly adding new hires to its ranks of experienced architects. Recognizing the need to capture and share proven designs and architectures, we started to document our work on the J2EE platform in the form of patterns in 1999. Although we looked in the existing literature, we could not find a catalog of patterns that dealt specifically with the J2EE platform. We found many books dealing with one or more of the J2EE technologies, and these books do an excellent job of explaining the technology and unraveling the nuances of the specifications. Some books offered extra help by providing some design considerations. Since we first publicly presented our ideas on J2EE patterns at the JavaOne Conference in June 2000, we have received an overwhelming response from architects and developers. While some individuals expressed great interest in learning more about the patterns, others confirmed that they had applied the patterns, but had never named or documented them. This interest in patterns for the J2EE platform further motivated us to continue our work. Thus, we put together the J2EE Pattern Catalog., which was initially made available to the entire J2EE community in beta form via the Java Developer Connection in March, 2001. Based largely on community feedback, the beta documentation evolved into the release you see in this book. We hope these patterns, best practices, strategies, bad practices, and refactorings for the J2EE platform, provide the same benefits to you as they do for us. What This Book Is About This book is about: Using patterns for the J2EE Platform. Based on our collective J2EE platform experience, we have assembled the pattern catalog in this book. The J2EE Pattern Catalog describes various best practices related to architecting and designing applications for the J2EE platform. This book focuses on the following four J2EE technologies: Servlets, JSP, EJB components, and JMS. Using best practices to design applications that use JSP, Servlet, EJB components, and JMS technologies. It is not sufficient to merely learn the technology and the APIs. It is equally important to learn to design with the technology. We have documented what we have experienced to be the best practices for these technologies. Preventing re-inventing-the-wheel when it comes to design and architecture for the J2EE platform. Patterns promote design reuse. Reusing known solutions reduces the cycle time for designing and developing applications, including J2EE applications. Identifying bad practices in existing designs and refactoring these designs to move to a better solution using the J2EE patterns. Knowing what works well is good. Knowing what does not work is equally important. We have documented some of the bad practices we have experienced when designing applications for the J2EE platform. What This Book Is Not This book is not about: How to program with Java or J2EE technologies. This book is not about programming. While this book is heavily based on the J2EE technologies, we do not describe the specific APIs. If you wish to learn about programming using Java or using any of the J2EE technologies, there are a number of excellent books and online resources from which to learn. The online tutorials on the official Java home page are highly recommended if you wish to learn about individual technologies. The official specifications for J2EE technologies are also available from the Java home page. What process and methodology to use. We do not suggest any type of process or methodology to use since the material presented in this book is not related to either. Hence, this book does not teach you about a process or methodology to follow in your projects. If you would like to learn more about processes and methodologies, there are a good number of books that deal with various object-oriented methodologies and new books on lightweight processes, such as Extreme Programming. How to use Unified Modeling Language (UML). This book is not going to teach you about UML. We use UML extensively (specifically class and sequence diagrams) to document the patterns and describe the static and dynamic interactions. If you want to learn more about UML, please refer to the UML User Guide Booch and the UML Reference Manual Rumbaugh by Grady Booch, Ivar Jacobson, and James Rumbaugh. Who Should Read This Book This book is for all J2EE enthusiasts, programmers, architects, developers, and technical managers. In short, anyone who is remotely interested in designing, architecting, and developing applications for the J2EE platform. We have attempted to distinguish this book as a training guide for J2EE architects and designers. We all recognize the importance of good designs and well-architected projects, and that we need good architects to get there. The use of well-documented patterns, best practices, and bad practices to share and transfer knowledge and experience can prove invaluable for teams with varied experience levels, and we hope that this book answers some of these needs. How This Book Is Organized This book is organized into three parts. Part 1—Patterns and J2EE, consists of Chapter 1 and Chapter 2. Chapter 1: Introduction on page 4 is a brief discussion on various topics, including patterns, J2EE platform, defining a pattern, and pattern categorization. It ends by introducing the J2EE patterns catalog. Chapter 2: J2EE Platform Overview on page 16 provides a high level overview of the J2EE platform for those readers unfamiliar with J2EE, or who wish to refresh their knowledge of the J2EE platform. Part 2—Design Considerations, Bad Practices, and Refactorings deals with design considerations for JSP, Servlets, and enterprise beans. This part also includes bad practices and refactorings for the J2EE platform. This part is comprised of Chapter 3, 4, and 5. Chapter 3: Presentation Tier Design Considerations and Bad Practices on page 34 and Chapter 4: Business Tier Design Considerations and Bad Practices on page 54 discuss the design considerations and bad practices for the presentation tier and businessintegration tiers respectively. The design considerations are issues that a J2EE developerdesignerarchitect needs to consider while working with the J2EE platform. The topics presented in these chapters point the reader to other sources (such as official specifications and well written books on these topics) for more detailed information on these issues. Chapter 5: J2EE Refactorings on page 72 includes some of the refactorings we have experienced in our work in the field that has enabled us to move our design from a less optimal solution to a better solution. The refactorings provide another way to think about the material in the rest of the book, providing what we believe to be valuable companion material to the pattern catalog. This chapter shows how we have been influenced by Martin Fowler and his book Refactoring Fowler. For those readers who are familiar with the Refactoring book, the format of this chapter will be very familiar. However, the content of this chapter is entirely in the context of J2EE technologies, whereas Martin Fowler addresses refactoring at a different level. Part 3—J2EE Pattern Catalog presents the J2EE pattern catalog. The catalog contains the fifteen patterns that form the core of this book. This part is comprised of Chapter 6, 7, 8, and 9. Chapter 6: J2EE Patterns Overview on page 124 provides an overview of the J2EE pattern catalog. This chapter begins with a high level discussion of the pattern ideas and explains the way the patterns are categorized into tiers. It also explains the J2EE pattern template, which is used to present all patterns in this book. The chapter discusses all the J2EE patterns and uses a diagram to show their inter-relationships. It also provides what we have termed a roadmap to the pattern catalog. This roadmap presents common J2EE design and architecture-related questions with references to patterns or refactorings that provide solutions to these questions. Understanding the pattern relationships and the roadmap is key to using these patterns. Chapter 7: Presentation Tier Patterns on page 150 presents six patterns that pertain to using Servlets, JSP, JavaBeans, and custom tags to design web-based applications for the J2EE platform. The patterns describe numerous implementation strategies, and address common problems such as request handling, application partitioning, and generating composite displays. Chapter 8: Business Tier Patterns on page 246 presents seven patterns that pertain to using EJB technology to design business components for the J2EE platform. The patterns in this chapter provide the best practices for using the EJB and JMS technologies. Where relevant, these patterns include discussion on other technologies, such as JNDI and JDBC. Chapter 9: Integration Tier Patterns on page 388 presents two patterns that pertain to integrating J2EE applications with the resource tier and external systems. The patterns deal with using JDBC and JMS to enable integration between business tier and resource tier components. Epilogue: J2EE Patterns Applied on page 422 discusses realizing sample use cases with the patterns. This chapter discusses and demonstrates how patterns are combined and work together. This chapter reinforces the idea that patterns exist in a community, and that each pattern supports, and is supported by, other patterns.}
+}
+
+@book{BCK12,
+    author = {Bass, Len and Clements, Paul and Kazman, Rick},
+    title = {Software Architecture in Practice},
+    year = {2012},
+    isbn = {0321815734},
+    publisher = {Addison-Wesley Professional},
+    edition = {3rd},
+    abstract = {The award-winning and highly influential Software Architecture in Practice, Third Edition, has been substantially revised to reflect the latest developments in the field. In a real-world setting, the book once again introduces the concepts and best practices of software architecturehow a software system is structured and how that systems elements are meant to interact. Distinct from the details of implementation, algorithm, and data representation, an architecture holds the key to achieving system quality, is a reusable asset that can be applied to subsequent systems, and is crucial to a software organizations business strategy. The authors have structured this edition around the concept of architecture influence cycles. Each cycle shows how architecture influences, and is influenced by, a particular context in which architecture plays a critical role. Contexts include technical environment, the life cycle of a project, an organizations business profile, and the architects professional practices. The authors also have greatly expanded their treatment of quality attributes, which remain central to their architecture philosophywith an entire chapter devoted to each attributeand broadened their treatment of architectural patterns. If you design, develop, or manage large software systems (or plan to do so), you will find this book to be a valuable resource for getting up to speed on the state of the art. Totally new material covers Contexts of software architecture: technical, project, business, and professional Architecture competence: what this means both for individuals and organizations The origins of business goals and how this affects architecture Architecturally significant requirements, and how to determine them Architecture in the life cycle, including generate-and-test as a design philosophy; architecture conformance during implementation; architecture and testing; and architecture and agile development Architecture and current technologies, such as the cloud, social networks, and end-user devices}
+}
