docs: add section Architektur

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -216,6 +216,7 @@
 
 	\input{part two/teil2}
 	\input{part two/Objektorientierte Analyse/index}
+	\input{part two/Architektur/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
