--- a/docs/repetitorium/part two/Objektorientierte Analyse/analysemuster.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/analysemuster.tex
@@ -1,4 +1,4 @@
-\section{Analysemuster}
+\section{Analysemuster}\label{sec:analysemuster}
 
 \subsection*{Muster}
 Im Software Engineering versteht man unter dem Begriff \textit{Muster} (\textit{Pattern}) \textbf{vorgefertigte Lösungsschablonen für verallgemeinerte Probleme}.\\
