--- a/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
+++ b/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
@@ -49,7 +49,7 @@ Diese werden häufig durch vorgefertigte Frameworks unterstützt bzw. realisiert
 Architekturen werden in Sichten dokumentiert:
 
 \begin{itemize}
-    \item \textbf{Kontextsicht} (zeigt das System als Blackbox in seinem KOntext aus einer Vogelperspektive)
+    \item \textbf{Kontextsicht} (zeigt das System als Blackbox in seinem Kontext aus einer Vogelperspektive)
     \item \textbf{Baustein-Sicht} (statisches Modell: ``Bausteinsichten zeigen die statischen Strukturen der Architekturbausteine des Systems, Subsysteme, Komponenten und deren Schnittstellen.``\footnote{
         \cite[81]{Sta14e}.
         Nachfolgende Beschreibungen der Sichten wurden \textit{Starke} entnommen.
