docs: update index, bib refs and meta data

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -217,6 +217,7 @@
 	\input{part two/teil2}
 	\input{part two/Objektorientierte Analyse/index}
 	\input{part two/Architektur/index}
+	\input{part two/Objektorientierter Entwurf/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
