chore(docs): typo

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/vorgehen beim entwerfen.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/vorgehen beim entwerfen.tex
@@ -9,7 +9,7 @@ Hierzu werden die Klassen des \textbf{Domänenmodells} als Grundlage genutzt.\\
 Nacheinander werden Klassen entworfen, die, für die \textbf{Erfüllung der funktionalen Anforderungen} verantwortlich sind, und anschließend in Quelltext umgesetzt.\\
 
 \noindent
-Zunächst werdn die Klassen und ihre Beziehungen in einem Klassenmodell entworfen.\\
+Zunächst werden die Klassen und ihre Beziehungen in einem Klassenmodell entworfen.\\
 
 \noindent
 \textbf{Sequenzdiagramme} werden meist nur für ausgewählte Abläufe modelliert, um zu prüfen, ob die entworfenen Klassen für die Abläufe geeignet sind, und zum anderen für die Dokumentation schwieriger oder unklarer Abläufe.\\
