docs: add section Entwurfsmuster

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -15,7 +15,7 @@
 \usepackage{python}
 \usepackage{xparse}
 \usepackage{enumitem}
-\usepackage[outputdir=../../../auxil]{minted}
+\usepackage[outputdir=../../auxil]{minted}
 \usepackage{comment}
 \usepackage{ulem}
 \usepackage[inkscapeformat=png]{svg}
