--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -276,6 +276,17 @@ and Rundshagen, Michael",
     year = 1996
 }
 
+@book{Fow03,
+    title={Patterns of Enterprise Application Architecture},
+    author={Fowler, M.},
+    isbn={9780321127426},
+    lccn={2002027743},
+    series={A Martin Fowler signature book},
+    year={2003},
+    publisher={Addison-Wesley}
+}
+
+
 @book{ACM02,
     author = {Alur, Deepak and Malks, Dan and Crupi, John and Booch, Grady and Fowler, Martin},
     title = {Core J2EE Patterns (Core Design Series): Best Practices and Design Strategies},
