--- a/docs/repetitorium/part two/Architektur/architekturmuster.tex
+++ b/docs/repetitorium/part two/Architektur/architekturmuster.tex
@@ -1,4 +1,4 @@
-\section{Architekturmuster}
+\section{Architekturmuster}\label{sec:architekturmuster}
 
 \textbf{Architekturmuster} sind wie Analysemuster\footnote{
     s. Abschnitt~\ref{sec:analysemuster}
