--- a/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
@@ -6,6 +6,7 @@
 \input{part two/Objektorientierter Entwurf/klassen im entwurf}
 \input{part two/Objektorientierter Entwurf/strukturen und verhalten}
 \input{part two/Objektorientierter Entwurf/vorgehen beim entwerfen}
+\input{part two/Objektorientierter Entwurf/entwurfsmuster}
 \newpage
 
 
