docs: add section Beispiel eines Entwurfs

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
@@ -7,6 +7,7 @@
 \input{part two/Objektorientierter Entwurf/strukturen und verhalten}
 \input{part two/Objektorientierter Entwurf/vorgehen beim entwerfen}
 \input{part two/Objektorientierter Entwurf/entwurfsmuster}
+\input{part two/Objektorientierter Entwurf/beispiel eines entwurfs}
 \newpage
 
 
