docs: add section Prinzipien guten Entwurfs

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/entwurfsmuster.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/entwurfsmuster.tex
@@ -64,7 +64,7 @@ In der Hinsicht ist der Controller ein Observer für die GUI-Elemente, die Nutze
 \subsubsection*{Vorteile}
 Die Vorteile sind eine klare Trennung der Verantwortlichkeiten sowie die hierdurch bedingte lose Kopplung der Komponenten untereinander, was ein Testen sowie Austauschen der eingesetzten Komponenten vereinfacht.
 
-\subsection{Immutable}
+\subsection{Immutable}\label{subsec:immutable}
 
 \subsubsection*{Problem}
 \begin{itemize}
