--- a/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
@@ -8,6 +8,7 @@
 \input{part two/Objektorientierter Entwurf/vorgehen beim entwerfen}
 \input{part two/Objektorientierter Entwurf/entwurfsmuster}
 \input{part two/Objektorientierter Entwurf/beispiel eines entwurfs}
+\input{part two/Objektorientierter Entwurf/prinzipien guten entwurfs}
 \newpage
 
 
